--- a/main.ipynb
+++ b/main.ipynb
@@ -407,20 +407,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from statistics import stdev\n",
     "def st_dev(arr):\n",
-    "    pass"
+    "# Calcular la media\n",
+    "    lenght = 0\n",
+    "    for i in arr:\n",
+    "        lenght += 1\n",
+    "    suma = 0\n",
+    "    for i in arr:\n",
+    "        suma += i\n",
+    "    mean = suma / lenght\n",
+    "# Calcular la distancia de cada valor con la media\n",
+    "    distancia = []\n",
+    "    for i in arr:\n",
+    "        distancia.append(i - mean)\n",
+    "# Calcular el cuadrado de las distancias\n",
+    "    cuadrado_distancia = []\n",
+    "    for i in distancia:\n",
+    "        cuadrado_distancia.append(i**2)\n",
+    "# Calcular la varianza, media de la suma de los cuadrados\n",
+    "    suma_cuadrado_distancia = 0\n",
+    "    for i in cuadrado_distancia:\n",
+    "        suma_cuadrado_distancia += i\n",
+    "    varianza = suma_cuadrado_distancia / (lenght -1)\n",
+    "# La desviacion estandard es la raiz cuadrada de la varianza\n",
+    "    desv_stand = varianza**0.5\n",
+    "    return desv_stand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.056s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_stdev(st_dev)"
