--- a/main.ipynb
+++ b/main.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,6 @@
     "        if f > mayor:\n",
     "            mayor = f\n",
     "    \n",
-    "    mode_lst = []\n",
     "    for d, e in mode.items():\n",
     "        if mayor == e:\n",
     "            return d"
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +385,7 @@
      "text": [
       "....................................................................................................\n",
       "----------------------------------------------------------------------\n",
-      "Ran 100 tests in 0.129s\n",
+      "Ran 100 tests in 0.158s\n",
       "\n",
       "OK\n"
      ]
@@ -475,7 +474,11 @@
    "outputs": [],
    "source": [
     "def pangram(string):\n",
-    "    pass"
+    "    letters = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    for i in letters:\n",
+    "        if i not in string.lower():\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
@@ -499,19 +502,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_alpha(string):\n",
-    "    pass"
+    "    lista_palabras = []\n",
+    "    palabras = ''\n",
+    "    for i in string:\n",
+    "        if i == ',':\n",
+    "            lista_palabras.append(palabras)\n",
+    "            palabras = ''\n",
+    "        else:\n",
+    "            palabras += i\n",
+    "    lista_palabras.append(palabras)\n",
+    "    ordenadas = sorted(lista_palabras)\n",
+    "\n",
+    "    contador = 0\n",
+    "    for i in ordenadas:\n",
+    "        contador += 1\n",
+    "\n",
+    "    string_ordenado = ''\n",
+    "    for i in ordenadas:\n",
+    "        if ordenadas.index(i) != contador-1:\n",
+    "            string_ordenado += i\n",
+    "            string_ordenado += ','\n",
+    "        else:\n",
+    "            string_ordenado += i\n",
+    "\n",
+    "    return string_ordenado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.049s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_alpha(sort_alpha)"
