--- a/main.ipynb
+++ b/main.ipynb
@@ -565,19 +565,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_pass(string):\n",
-    "    pass"
+    "    count = 0\n",
+    "    special_char = '#@!$%&()^*[]{}'\n",
+    "    lower = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+    "    numbers = '0123456789'\n",
+    "\n",
+    "    for i in string:\n",
+    "        count += 1\n",
+    "\n",
+    "    if count < 8:\n",
+    "        return False\n",
+    "\n",
+    "    for a in string:\n",
+    "        for b in special_char:\n",
+    "            if a == b:\n",
+    "                for a in string:\n",
+    "                    for b in lower:\n",
+    "                        if a == b:\n",
+    "                            for a in string:\n",
+    "                                for b in upper:\n",
+    "                                    if a == b:\n",
+    "                                        for a in string:\n",
+    "                                            for b in numbers:\n",
+    "                                                if a == b:\n",
+    "                                                    return True\n",
+    "                                                else:\n",
+    "                                                    continue\n",
+    "                                    else:\n",
+    "                                        continue\n",
+    "                        else:\n",
+    "                            continue\n",
+    "            else:\n",
+    "                continue\n",
+    "            \n",
+    "\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.051s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_pass(check_pass)"
