--- a/main.ipynb
+++ b/main.ipynb
@@ -469,23 +469,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pangram(string):\n",
     "    letters = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    string_lower = string.lower()\n",
+    "    dict_letters = {}\n",
+    "    for a in letters:\n",
+    "        for b in string_lower:\n",
+    "            if a == b:\n",
+    "                dict_letters[a] = b\n",
+    "\n",
+    "    contador_1 = 0\n",
+    "    contador_2 = 0\n",
+    "\n",
+    "    for i in dict_letters.keys():\n",
+    "        contador_2 += 1\n",
     "    for i in letters:\n",
-    "        if i not in string.lower():\n",
-    "            return False\n",
-    "    return True"
+    "        contador_1 += 1\n",
+    "\n",
+    "    if contador_1 == contador_2:\n",
+    "        return True\n",
+    "    if contador_1 != contador_2:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..............................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 30 tests in 0.017s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_pangram(pangram)"
