--- a/main.ipynb
+++ b/main.ipynb
@@ -469,36 +469,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pangram(string):\n",
     "    letters = 'abcdefghijklmnopqrstuvwxyz'\n",
     "    string_lower = string.lower()\n",
-    "    dict_letters = {}\n",
+    "    valores_iguales = ''\n",
     "    for a in letters:\n",
     "        for b in string_lower:\n",
-    "            if a == b:\n",
-    "                dict_letters[a] = b\n",
+    "            \n",
+    "            if a != b:\n",
+    "                continue    \n",
+    "            else:\n",
+    "                valores_iguales += a\n",
+    "                break\n",
     "\n",
-    "    contador_1 = 0\n",
-    "    contador_2 = 0\n",
-    "\n",
-    "    for i in dict_letters.keys():\n",
-    "        contador_2 += 1\n",
-    "    for i in letters:\n",
-    "        contador_1 += 1\n",
-    "\n",
-    "    if contador_1 == contador_2:\n",
+    "    if valores_iguales == letters:\n",
     "        return True\n",
-    "    if contador_1 != contador_2:\n",
+    "    else:\n",
     "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
