Terminado sin trampitas, creo

--- a/main.ipynb
+++ b/main.ipynb
@@ -303,21 +303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique(arr):\n",
-    "    lst_uniq = []\n",
-    "    for i in arr:\n",
-    "        if i not in lst_uniq:\n",
-    "            lst_uniq.append(i)\n",
-    "    return lst_uniq"
+    "    unicos = []\n",
+    "    dicti = {}\n",
+    "    for a in arr:\n",
+    "        dicti[a] = a\n",
+    "    for a in dicti.keys():\n",
+    "        unicos.append(a)\n",
+    "         \n",
+    "    return unicos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +329,7 @@
      "text": [
       "....................................................................................................\n",
       "----------------------------------------------------------------------\n",
-      "Ran 100 tests in 0.078s\n",
+      "Ran 100 tests in 0.050s\n",
       "\n",
       "OK\n"
      ]
